# Agentic-Cold-Emailer-System

./: .gitignore  Agentic_Cold_Emailer_System_Design.md  README.md  main.py  pyproject.toml  requirements.txt  user_prompts.txt
Data/: email.csv
Data Injection/: excel_reader.py  excel_reder.ipynb  resume_reader.py
data_injection/: __init__.py  excel_csv.py  resume_reader.py
emailer_agent/: __init__.py  agent.py  smtp_client.py
frontend/: app.py
rag_pipeline/: __init__.py  rag_chain.py  vector_store.py  vectore_store.py
